--- a/PP-TA-Master/PP-TA-Kafka-Master/PP-TA-Kafka-Producer/pom.xml
+++ b/PP-TA-Master/PP-TA-Kafka-Master/PP-TA-Kafka-Producer/pom.xml
@@ -44,5 +44,9 @@
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.kafka</groupId>
+			<artifactId>kafka-clients</artifactId>
+		</dependency>
 	</dependencies>
 </project>
