--- a/PP-TA-Master/PP-TA-Kafka-Master/pom.xml
+++ b/PP-TA-Master/PP-TA-Kafka-Master/pom.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<artifactId>PP-TA-Master</artifactId>
@@ -10,8 +12,17 @@
 	<artifactId>PP-TA-Kafka-Master</artifactId>
 	<packaging>pom</packaging>
 	<name>PP-TA-Kafka-Master</name>
-  <modules>
-    <module>PP-TA-Kafka-Producer</module>
-    <module>PP-TA-Kafka-Consumer</module>
-  </modules>
+	<dependencyManagement>
+		<dependencies>
+			<dependency>
+				<groupId>org.apache.kafka</groupId>
+				<artifactId>kafka-clients</artifactId>
+				<version>2.8.0</version>
+			</dependency>
+		</dependencies>
+	</dependencyManagement>
+	<modules>
+		<module>PP-TA-Kafka-Producer</module>
+		<module>PP-TA-Kafka-Consumer</module>
+	</modules>
 </project>
