Apache Kafka initial commit

--- a/PP-TA-Master/PP-TA-Kafka-Master/PP-TA-Kafka-Consumer/pom.xml
+++ b/PP-TA-Master/PP-TA-Kafka-Master/PP-TA-Kafka-Consumer/pom.xml
@@ -11,4 +11,42 @@
 	<artifactId>PP-TA-Kafka-Consumer</artifactId>
 	<packaging>jar</packaging>
 	<name>PP-TA-Kafka-Consumer</name>
+	<dependencies>
+		<dependency>
+			<groupId>
+					jk.provider.portal.engineering.foundations
+				</groupId>
+			<artifactId>PP-Engg-Common-Core</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>
+					jk.provider.portal.engineering.foundations
+				</groupId>
+			<artifactId>PP-Engg-Common-Domain</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>
+					jk.provider.portal.engineering.foundations
+				</groupId>
+			<artifactId>PP-Engg-Common-Service</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter</artifactId>
+			<scope>provided</scope>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.kafka</groupId>
+			<artifactId>kafka-clients</artifactId>
+		</dependency>
+	</dependencies>
 </project>
